--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
         "symfony/yaml": "^7.3",
-        "symfony/console": "*",
+        "symfony/console": "^7.3",
         "symfony/runtime": "^7.3"
     },
     "config": {
