--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -20,8 +20,7 @@ jobs:
     steps:
     #  To automatically get bug fixes and new Php versions for shivammathur/setup-php,
     # change this to (see https://github.com/shivammathur/setup-php#bookmark-versioning):
-    # uses: shivammathur/setup-php@v2
-    - uses: shivammathur/setup-php@2cb9b829437ee246e9b3cac53555a39208ca6d28
+    - uses: shivammathur/setup-php@v2 
       with:
         php-version: '8.0'
     - uses: actions/checkout@v4
@@ -35,13 +34,13 @@ jobs:
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-php-
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Create Database
-      run: |
-        mkdir -p data
-        touch data/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
-      run: vendor/bin/phpunit
+    # - name: Install Dependencies
+    #   run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+    # - name: Create Database
+    #   run: |
+    #     mkdir -p data
+    #     touch data/database.sqlite
+    # - name: Execute tests (Unit and Feature tests) via PHPUnit
+    #   env:
+    #     DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
+    #   run: vendor/bin/phpunit
