--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,10 +14,12 @@ services:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     Cmrweb\AddressBundle\:
-        resource: '../src/'
+        resource: '../src/*'
+        exclude: '../src/{DependencyInjection,Entity,Tests,Kernel.php}'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
     Cmrweb\AddressBundle\Service\ApiAddressService:
         arguments:
             $url: '%cmrweb.api.address%'
+        public: true
