--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
         "symfony/browser-kit": "^8.0",
         "symfony/css-selector": "^8.0",
         "symfony/phpunit-bridge": "^8.0",
-        "symfony/dom-crawler": "^8.0"
+        "symfony/dom-crawler": "^8.0",
+        "symfony/maker-bundle": "^1.65"
     },
     "scripts": {
         "auto-scripts": {
