--- a/config/services.yaml
+++ b/config/services.yaml
@@ -3,8 +3,7 @@
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
-parameters:
-
+parameters: 
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -16,9 +15,15 @@ services:
     Cmrweb\AddressBundle\:
         resource: '../src/*'
         exclude: '../src/{DependencyInjection,Entity,Tests,Kernel.php}'
-        public: true
+
     # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    # please note that last definitions always *replace* previous ones 
+    Cmrweb\AddressBundle\Service\ApiAddressService:
+        arguments:
+            $url: "https://data.geopf.fr/"
+        public: true
+        autowire: true
+        autoconfigure: true
     Cmrweb\AddressBundle\Maker\AddressComponentCommand:
         tags: ['maker.command']
         public: true 
